--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -39,7 +39,7 @@
             <h2 class="display-5 text-center text-uppercase font-weight-light">Apply to a host location</h2>
             <p class="text-center lead">You can host a partner location of the Summer Institutes of Computational Social Science (SICSS) at your university,
             company, NGO, or government agency.</p>
-            <p class=text-center><a href="host" class="btn btn-dark">Learn More</a></p>
+            <p class=text-center><a href="https://compsocialscience.github.io/summer-institute/host#hosting_a_partner_location" class="btn btn-dark">Learn More</a></p>
           </div>
         </div>
       </div>
