--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -1,4 +1,5 @@
 {% include setup_data.html %}
+{% include setup_locations_by_year.inc %}
 <!DOCTYPE html>
 <html lang="en" class="year_{{ year }}">
   <head>
@@ -23,7 +24,7 @@
             </li>
           </ul>
         </div>
-        
+
         <div class="col-md-8 mb-5">
           {{content}}
 
