--- a/_includes/people_listing_all.html
+++ b/_includes/people_listing_all.html
@@ -27,23 +27,23 @@
   {% endfor %}
 </div>
 
-{% for year_num in (2017..site.current_year) reversed %}
-{% assign allyears = year_num | downcase %}
+{% for year in locations_by_year %}
 <div class="row">
   <div class="col-sm-12">
-    <h1 id="{{allyears}}">{{allyears}}</h1>
+    <h1 id="{{year.year}}">{{year.year}}</h1>
     <br />
   </div>
-{% for year in site.data[allyears] %}
+{% for year_location in year.locations %}
+  {% assign location = site.data[year.year][year_location.slug] %}
   <div class="col-sm-12">
-    <h2 id="{{year[1].location.link}}{{year[1].location.year}}">{{year[1].location.title}}</h2>
-    <h4 id={{group[0]}} class="h3 mb-4">All Participants 
+    <h2 id="{{location.location.link}}{{location.location.year}}">{{location.location.title}}</h2>
+    <h4 class="h3 mb-4">All Participants
       <!-- <small class="text-muted font-weight-light">(Listed alphabetically)</small> -->
     </h4>
     <hr />
   </div>
-  {% if year[1].people %}
-    {% assign people_data = year[1].people %}
+  {% if location.people %}
+    {% assign people_data = location.people %}
     {% for group in people_data %}
       {% assign people = group[1].people %}
       {% if people %}
@@ -71,10 +71,10 @@
       {% endif %}
     {% endfor %}
     {% else %}
-      {% assign faculty = year[1].faculty %}
-      {% assign speakers = year[1].speakers %}
-      {% assign participants = year[1].participants %}
-      {% assign teaching_assistants = year[1].teaching_assistants %}
+      {% assign faculty = location.faculty %}
+      {% assign speakers = location.speakers %}
+      {% assign participants = location.participants %}
+      {% assign teaching_assistants = location.teaching_assistants %}
         {% for person in faculty %}
           <div class="media mb-5">
             {% if person.image %}
