--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -1,4 +1,5 @@
 {% include setup_data.html %}
+{% include setup_locations_by_year.inc %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          {% include sidebar.html %} 
+          {% include sidebar.html %}
         </div>
         <div class="col-sm-8">
           <h2 class="display-4">Locations, past and present</h2>
