--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -1,4 +1,5 @@
 {% include setup_data.html %}
+{% include setup_locations_by_year.inc %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,7 +9,7 @@
     {% include navbar.html %}
     {% include hero_secondary.html %}
   <!-- Start content -->
-  <section>  
+  <section>
     <div class="container">
       <div class="row">
         {% include sidebar.html %}
