--- a/_includes/locations_two_column.html
+++ b/_includes/locations_two_column.html
@@ -4,8 +4,8 @@
     <h1 id="{{year.year}}">{{year.year}}</h1>
   </div>
     {% for year_location in year.locations %}
-    {% assign location_data = site.data[year.year][year_location.slug].location %}
-    {% assign apply_data = site.data[year.year][year_location.slug].apply %}
+    {% assign location_data = year_location.location %}
+    {% assign apply_data = year_location.apply %}
       {% include locations_listing.html location_data=location_data apply_data=apply_data year=year.year %}
     {% endfor %}
 {% endfor %}
