--- a/_includes/people_listing_all.html
+++ b/_includes/people_listing_all.html
@@ -5,25 +5,7 @@
     <br />
   </div>
   {% for leader in data.leadership %}
-    <div class="media mb-5">
-      {% if leader.image %}
-      {% assign image_prefix = leader.image | slice: 0, 4 %}
-      {% if image_prefix == "http" %}
-        {% assign image_url = leader.image %}
-      {% else %}
-        {% assign image_url = leader.image | prepend: site.baseurl %}
-      {% endif %}
-      <img src="{{ image_url }}" alt="Image of {{ leader.name }}" class="mr-5 rounded" width="150">
-      {% endif %}
-      <div class="media-body">
-        <h5 class="mt-0 font-weight-bold">{{leader.name}}</h5>
-        {{leader.bio}}
-        <br>
-        {% if leader.website %}
-        <a href={{leader.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-        {% endif %}
-      </div>
-    </div>
+    {% include person.html person=leader %}
   {% endfor %}
 </div>
 
@@ -47,26 +29,8 @@
     {% for group in people_data %}
       {% assign people = group[1].people %}
       {% if people %}
-        {% for card in people %}
-          <div class="media mb-5">
-            {% if card.image %}
-            {% assign image_prefix = card.image | slice: 0, 4 %}
-            {% if image_prefix == "http" %}
-              {% assign image_url = card.image %}
-            {% else %}
-              {% assign image_url = card.image | prepend: site.baseurl %}
-            {% endif %}
-            <img src="{{ image_url }}" alt="Image of {{ card.name }}" class="mr-5 rounded" width="150">
-            {% endif %}
-            <div class="media-body">
-              <h5 class="mt-0 font-weight-bold">{{card.name}}</h5>
-              {{card.bio}}
-              <br>
-              {% if card.website %}
-              <a href={{card.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-              {% endif %}
-            </div>
-          </div>
+        {% for person in people %}
+          {% include person.html person=person %}
         {% endfor %}
       {% endif %}
     {% endfor %}
@@ -75,89 +39,17 @@
       {% assign speakers = location.speakers %}
       {% assign participants = location.participants %}
       {% assign teaching_assistants = location.teaching_assistants %}
-        {% for person in faculty %}
-          <div class="media mb-5">
-            {% if person.image %}
-            {% assign image_prefix = person.image | slice: 0, 4 %}
-            {% if image_prefix == "http" %}
-              {% assign image_url = person.image %}
-            {% else %}
-              {% assign image_url = person.image | prepend: site.baseurl %}
-            {% endif %}
-            <img src="{{ image_url }}" alt="Image of {{ person.name }}" class="mr-5 rounded" width="150">
-            {% endif %}
-            <div class="media-body">
-              <h5 class="mt-0 font-weight-bold">{{person.name}}</h5>
-              {{person.bio}}
-              <br>
-              {% if person.website %}
-              <a href={{person.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-              {% endif %}
-            </div>
-          </div>
-        {% endfor %}
-        {% for person in speakers %}
-        <div class="media mb-5">
-          {% if person.image %}
-          {% assign image_prefix = person.image | slice: 0, 4 %}
-          {% if image_prefix == "http" %}
-            {% assign image_url = person.image %}
-          {% else %}
-            {% assign image_url = person.image | prepend: site.baseurl %}
-          {% endif %}
-          <img src="{{ image_url }}" alt="Image of {{ person.name }}" class="mr-5 rounded" width="150">
-          {% endif %}
-          <div class="media-body">
-            <h5 class="mt-0 font-weight-bold">{{person.name}}</h5>
-            {{person.bio}}
-            <br>
-            {% if person.website %}
-            <a href={{person.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-            {% endif %}
-          </div>
-        </div>
+      {% for person in faculty %}
+        {% include person.html person=person %}
+      {% endfor %}
+      {% for person in speakers %}
+        {% include person.html person=person %}
       {% endfor %}
       {% for person in participants %}
-        <div class="media mb-5">
-          {% if person.image %}
-          {% assign image_prefix = person.image | slice: 0, 4 %}
-          {% if image_prefix == "http" %}
-            {% assign image_url = person.image %}
-          {% else %}
-            {% assign image_url = person.image | prepend: site.baseurl %}
-          {% endif %}
-          <img src="{{ image_url }}" alt="Image of {{ person.name }}" class="mr-5 rounded" width="150">
-          {% endif %}
-          <div class="media-body">
-            <h5 class="mt-0 font-weight-bold">{{person.name}}</h5>
-            {{person.bio}}
-            <br>
-            {% if person.website %}
-            <a href={{person.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-            {% endif %}
-          </div>
-        </div>
+        {% include person.html person=person %}
       {% endfor %}
       {% for person in teaching_assistants %}
-        <div class="media mb-5">
-          {% if person.image %}
-          {% assign image_prefix = person.image | slice: 0, 4 %}
-          {% if image_prefix == "http" %}
-            {% assign image_url = person.image %}
-          {% else %}
-            {% assign image_url = person.image | prepend: site.baseurl %}
-          {% endif %}
-          <img src="{{ image_url }}" alt="Image of {{ person.name }}" class="mr-5 rounded" width="150">
-          {% endif %}
-          <div class="media-body">
-            <h5 class="mt-0 font-weight-bold">{{person.name}}</h5>
-            {{person.bio}}
-            <br>
-            {% if person.website %}
-            <a href={{person.website}} target="_blank" class="btn btn-sm btn-dark mt-3">Website</a>
-            {% endif %}
-          </div>
-        </div>
+        {% include person.html person=person %}
       {% endfor %}
   {% endif %}
 {% endfor %}
