--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,4 @@
+{% if page.sidebar != "hide" %}
 <!-- detail page sidebar -->
 {% if page.partner_site %}
 {% assign urlparts = page.url | split: "/" %}
@@ -163,4 +164,4 @@
   </ul>
 </div>
 {% endif %}
-
+{% endif %}
