--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,24 +23,7 @@
       {% endif %}
     </ul>
     <ul class="nav flex-column">
-      <a class="nav-link collapsed" onmouseover="" style="cursor: pointer;" data-toggle="collapse" data-target="">Other Locations:</a>
-      {% assign current_year_str = site.current_year | downcase %}
-      {% for year in locations_by_year %}
-          {% if current_year_str == year.year %}
-            <ul>
-              {% for year_location in year.locations %}
-              {% assign apply_data = year_location.apply %}
-                {% assign location_data = year_location.location %}
-                {% if apply_data.title and location_data.apply_button != "hidden" %}
-                  <li><a href={{site.baseurl}}/{{location_data.year}}/{{location_data.link}}/apply>{{location_data.title}}</a></li>
-                {% endif %}
-              {% endfor %}
-            </ul>
-          {% endif %}
-      {% endfor %}
-    </ul>
-    <ul class="nav flex-column">
-      <a class="nav-link collapsed" onmouseover="" style="cursor: pointer;" data-toggle="collapse" data-target="">Other Years:</a>
+      <a class="nav-link collapsed" onmouseover="" style="cursor: pointer;" data-toggle="collapse" data-target="">Other Events:</a>
       {% for year_num in (2017..site.current_year) reversed %}
         {% assign allyears = year_num | downcase %}
         {% for checkyear in allyears %}
