Attempt 2: Add locations to sidebar
in partner_site pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,6 +36,27 @@
         {% endfor %}
       {% endfor %}
     </ul>
+    <ul class="nav flex-column" id="accordionMenu">
+    {% for year in locations_by_year %}
+      <li class="nav-item">
+        <a class="nav-link" onmouseover="" style="cursor: pointer;" data-toggle="collapse" data-target="#collapse{{forloop.index}}">{{year.year}}</a>
+        <ul class="nav collapse" id="collapse{{forloop.index}}" aria-labelledby="{{forloop.index}}" data-parent="#accordionMenu">
+        {% for year_location in year.locations %}
+        {% assign campus = year_location.location %}
+          {% if campus.title %}
+          <li class="nav-item w-100">
+            <a class="nav-link" href="#{{campus.link}}_{{campus.year}}">{{campus.title}}
+                {% if campus.primary %}
+                  <span>(Primary Location)</span>
+                {% endif %}
+            </a>
+          </li>
+          {% endif %}
+      {% endfor %}
+      </ul>
+      </li>
+      {% endfor %}
+    </ul>
     </ul>
   </div>
 {% endif %}
