--- a/_includes/curriculum_listing.html
+++ b/_includes/curriculum_listing.html
@@ -12,7 +12,7 @@
         <div class="col-lg-12">
           <div class="card border-0 mb-5">
             <div class="card-header bg-white border-0">
-              <span class="badge badge-dark">1</span> {{event.name}}
+              {{event.name}}
             </div>
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="560" height="315" src={{event.video}} frameborder="0"
@@ -36,7 +36,7 @@
     <div class="col-lg-12">
       <div class="card border-0 mb-5">
         <div class="card-header bg-white">
-          <span class="badge badge-dark">6</span> {{curriculum.exercise_title}}
+          {{curriculum.exercise_title}}
         </div>
           <ul class="list-group list-group-flush">
             {% for exercise in curriculum.exercise %}
