--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 {% if page.sidebar != "hide" %}
 {% if page.sidebar.first %}
-  <div class="col-md-4">
+  <!-- Removing the col-md-4 here -->
+  <!-- <div class="col-md-4"> -->
     <ul class="nav flex-column">
     {% for link in page.sidebar %}
       <li class="nav-item">
@@ -8,7 +9,7 @@
       </li>
     {% endfor %}
     </ul>
-  </div>
+  <!-- </div> -->
 {% else %}
 <!-- detail page sidebar -->
 {% if page.partner_site %}
@@ -16,7 +17,8 @@
 {% assign year = urlparts[1] %}
 {% assign location = urlparts[2] %}
 {% assign sidebar = site.data[year][location].sidebar %}
-  <div class="col-md-4">
+  <!-- Removing the col-md-4 here -->
+  <!-- <div class="col-md-4"> -->
     <ul class="nav flex-column">
       <li class="nav-item">
         <a class="nav-link" href="{{page.dir | prepend: site.baseurl}}">Overview</a>
@@ -48,7 +50,7 @@
       {% endfor %}
     </ul>
     </ul>
-  </div>
+  <!-- </div> -->
 {% endif %}
 
 <!-- locations sidebar -->
@@ -79,7 +81,8 @@
 <!-- people sidebar -->
 {% if page.layout == 'people' %}
   {% if page.partner_site %}
-    <div class="col-md-4">
+    <!-- Removing the col-md-4 here -->
+    <!-- <div class="col-md-4"> -->
       <ul class="nav flex-column">
         {% if data.people %}
           {% for group in data.people %}
@@ -89,9 +92,10 @@
           {% endfor %}
         {% endif %}
       </ul>
-    </div>
+    <!-- </div> -->
   {% else %}
-    <div class="col-md-4">
+    <!-- Removing the col-md-4 here -->
+    <!-- <div class="col-md-4"> -->
       <ul class="nav flex-column" id="accordionMenu">
         {% for year in locations_by_year %}
           <li class="nav-item">
@@ -115,13 +119,14 @@
           </li>
           {% endfor %}
         </ul>
-    </div>
+    <!-- </div> -->
   {% endif %}
 {% endif %}
 
 <!-- host sidebar -->
 {% if page.layout == 'host' %}
-<div class="col-md-4">
+<!-- Removing the col-md-4 here -->
+<!-- <div class="col-md-4"> -->
   <ul class="nav flex-column">
     <li class="nav-item">
       <a class="nav-link" href="#overview">Overview</a>
@@ -142,7 +147,7 @@
       <a class="nav-link" href="#frequently_asked">Frequently Asked Questions</a>
     </li>
   </ul>
-</div>
+<!-- </div> -->
 {% endif %}
 {% endif %}{% comment %} // sidebar is not array or hash {% endcomment %}
 {% endif %}{% comment %} // sidebar is not "hide" {% endcomment %}
