--- a/_layouts/curriculum.html
+++ b/_layouts/curriculum.html
@@ -10,9 +10,10 @@
     {% include hero_secondary.html %}
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <!-- Commenting this out because it happens already within sidebar.html -->
+        <!-- <div class="col-md-4"> -->
           {% include sidebar.html %}
-        </div>
+        <!-- </div> -->
         <div class="col-md-8" id="overview">
           <h2 class="display-4">Overview</h2>
           {{content}}
