Get correct breaks in between eventrs

--- a/_includes/curriculum_listing.html
+++ b/_includes/curriculum_listing.html
@@ -37,9 +37,11 @@
                     </ul>
                 </div>
             </div>
+            <hr class="my-5" />
         {% endif %}
     {% endfor %}
 {% endif %}
+<hr class="my-5" />
   {% comment %} <div class="row" id="{{curriculum.id}}">
     <div class="col-sm-12">
       <hr class="mt-5 mb-4">
