--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -77,7 +77,7 @@
 {% endif %}
 
 <!-- people sidebar -->
-{% if page.layout == 'people' %}
+{% if page.layout == 'people' or page.layout == 'people_search' %}
   {% if page.partner_site %}
     <div class="col-md-4">
       <ul class="nav flex-column">
