--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -17,11 +17,12 @@
           <div class="alert alert-secondary border-0 my-5">
             <form id="participant_search_form">
               <div class="input-group">
-                <input name="q" type="text" class="form-control" placeholder="Search people" aria-label="Search" aria-describedby="button-addon2">
+                <input name="q" type="text" class="form-control" placeholder="Search people" aria-label="Search" aria-describedby="searchHelp">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
                 </div><!--/input-group-append -->
               </div><!--/input-group -->
+              <small id="searchHelp" class="form-text text-muted">You can search by organization, research interests, or discipline with "organization:princeton", "research_interests:race", "discipline:journalism".</small>
             </form>
           </div>
 
