Split leadership into Founding Directors + Team

--- a/_includes/people_listing_all.html
+++ b/_includes/people_listing_all.html
@@ -1,6 +1,16 @@
 <div class="row">
   <div class="col-sm-12">
-    <h2 class="display-4">Leadership</h2>
+    <h2 class="display-4">Founding Directors</h2>
+    <hr />
+    <br />
+  </div>
+  {% for leader in data.founders %}
+    {% include person.html person=leader %}
+  {% endfor %}
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <h2 class="display-4">Leadership Team</h2>
     <hr />
     <br />
   </div>
