--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -92,6 +92,7 @@
     </div>
   {% else %}
     <div class="col-md-4">
+      <h5>Participants by Year</h5>
       <ul class="nav flex-column" id="accordionMenu">
         {% for year in locations_by_year %}
           <li class="nav-item">
