--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -14,16 +14,24 @@
       <div class="row">
         {% include sidebar.html %}
         <div class="col-sm-8">
-          <div class="alert alert-secondary border-0 my-5">
-            <form id="participant_search_form">
-              <div class="input-group">
-                <input name="q" type="text" class="form-control" placeholder="Search people" aria-label="Search" aria-describedby="searchHelp">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
-                </div><!--/input-group-append -->
-              </div><!--/input-group -->
-              <small id="searchHelp" class="form-text text-muted">You can search by organization, research interests, or discipline with "organization:princeton", "research_interests:race", "discipline:journalism".</small>
-            </form>
+          <div class="row">
+            <div class="col-sm-12">
+              <h2 class="display-4">Find a SICSS participant</h2>
+              <hr />
+            </div>
+            <div class="col-sm-12">
+              <div class="alert alert-secondary border-0">
+                <form id="participant_search_form">
+                  <div class="input-group">
+                    <input name="q" type="text" class="form-control" placeholder="Find a SICSS participant" aria-label="Search" aria-describedby="searchHelp">
+                    <div class="input-group-append">
+                      <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
+                    </div><!--/input-group-append -->
+                  </div><!--/input-group -->
+                  <small id="searchHelp" class="form-text text-muted">You can search by organization, research interests, or discipline with "organization:princeton", "research_interests:race", "discipline:journalism".</small>
+                </form>
+              </div>
+            </div>
           </div>
 
           <div class="row d-none" id="people_search_results_container">
