lazy load location images; force 16:9 ratio

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -52,6 +52,10 @@ body {
   text-decoration: underline;
 }
 
+.location-list-item .card-img-top {
+  object-fit: cover;
+}
+
 /*
   enable responsive font sizes
   https://christianoliff.com/blog/bootstrap-with-rfs
