--- a/_includes/locations_listing.html
+++ b/_includes/locations_listing.html
@@ -1,5 +1,5 @@
 {% if include.location_data and include.location_data.title %}
-  <div class="col-sm-6 mb-5">
+  <div class="col-sm-6 mb-5 location-list-item">
     <div class="card border-0" id="{{include.location_data.link}}_{{include.location_data.year}}">
       {% if include.location_data.image %}
         {% assign image_prefix = include.location_data.image | slice: 0, 4 %}
@@ -8,7 +8,9 @@
         {% else %}
           {% assign image_url = include.location_data.image | prepend: site.baseurl %}
         {% endif %}
-        <img class="card-img-top" src="{{image_url}}" alt="Find a location">
+        <div class="embed-responsive embed-responsive-16by9">
+          <img class="embed-responsive-item card-img-top" src="{{image_url}}" alt="Find a location" loading="lazy">
+        </div>
         <div class="card-body">
           <h5 class="card-title">{{include.location_data.title}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{include.location_data.subtitle}}</h6>
