--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -57,7 +57,7 @@
             <div class="card-body">
               <h5 class="card-title">Main Curriculum</h5>
               <p class="card-text">
-                The SICSS materials are the trainging materials used at the
+                The SICSS materials are the training materials used at the
                 SICSS central location. These materials are designed for
                 graduate students, postdocs, and junior faculty from both the
                 social and data sciences. They assume knowledge of the materials
