Add blog content

--- a/_includes/sidebar_blog.html
+++ b/_includes/sidebar_blog.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-    <h5>Blog posts by Year</h5>
+    <h5>Filter by Year</h5>
     <ul class="nav flex-column" id="accordionMenu">
         {% for year in locations_by_year %}
         <li class="nav-item">
