--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,13 +15,13 @@
         <div class="container">
             <div class="row">
                 {% include sidebar_blog.html %}
-                <!-- <div class="col-sm-8">
-                    {% if page.partner_site %}
-                    {% if data.post-mortem %}
-                    {% include post-mortem.html %}
-                    {% endif %}
-                    {% endif %}
-                </div> -->
+                <div class="col-sm-8">
+                    <div class="row">
+                        <div class="col-sm-12 mb-5">
+                            {{ content }}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
