Add post mortem template and about page

--- a/_includes/sidebar_blog.html
+++ b/_includes/sidebar_blog.html
@@ -13,7 +13,7 @@
                 {% if campus.title %}
                 {% if post_mortem.title %}
                 <li class="nav-item w-100">
-                    <a class="nav-link" href="{{site.baseurl}}/{{campus.year}}/{{campus.link}}/people">
+                    <a class="nav-link" href="{{site.baseurl}}/{{campus.year}}/post-mortem#{{campus.link}}">
                         {{campus.title}} {{post_mortem.title}}
                     </a>
                 </li>
