--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -56,6 +56,10 @@ body {
   object-fit: cover;
 }
 
+.img-about {
+  align-self: center;
+}
+
 /*
   enable responsive font sizes
   https://christianoliff.com/blog/bootstrap-with-rfs
