update partner location materials link

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -92,7 +92,7 @@
                     location, many partner locations develop their own materials
                     covering different topics or with different levels of depth.
                   </p>
-                  <a href="locations" class="btn btn-primary"
+                  <a href="https://github.com/compsocialscience/summer-institute/blob/carrieham-patch1/_data/alternative_curriculum.md" class="btn btn-primary"
                     >Partner Location Materials</a
                   >
                 </div>
