--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -9,6 +9,8 @@
     {% include navbar.html %}
     <!-- Start content -->
     {% include hero_secondary.html %}
+
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         <div class="col-md-4">
