--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -11,6 +11,7 @@
     {% include hero_secondary.html %}
     </div>
     <!--/jumbotron-->
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         <div class="col-md-8">
