--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@
 
     {% include hero_secondary.html %}
 
+    {% include breadcrumb.html %}
     <div class="container default">
       {{ content }}
     </div>
