--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -11,6 +11,7 @@
 
     {% include hero_secondary.html %}
 
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         <!-- sidebar -->
