--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -23,6 +23,7 @@
       <!--container-->
     </div>
     <!--/jumbotron-->
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         <div class="col-md-8">
