--- a/_layouts/host.html
+++ b/_layouts/host.html
@@ -10,6 +10,7 @@
 
     {% include hero_secondary.html %}
 
+    {% include breadcrumb.html %}
     <div class="container">
         <div class="row">
 
