--- a/_layouts/location_detail.html
+++ b/_layouts/location_detail.html
@@ -8,6 +8,8 @@
     {% include navbar.html %}
     <!-- Start content -->
     {% include hero_secondary.html %}
+
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         {% include sidebar.html %}
