--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -10,6 +10,7 @@
     {% include hero_secondary.html %}
   <!-- Start content -->
   <section>
+    {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
         {% include sidebar.html %}
