--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -1,4 +1,4 @@
-{% assign breadcrumbs = page.path | remove: ".md" | remove: "index" | split: "/" %}
+{% assign breadcrumbs = page.path | replace: "_", " " | remove: ".md" | remove: "index" | split: "/" %}
 
 <div class="container">
     <div class="row">
