--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -13,7 +13,11 @@
     {% include breadcrumb.html %}
     <div class="container">
       <div class="row">
-        {% include sidebar.html %}
+        <div class="col-md-4">
+          <div class="d-none d-md-block">
+            {% include people_filter.html %}
+          </div>
+        </div>
         <div class="col-sm-8">
           <div class="row">
             <div class="col-sm-12">
@@ -32,11 +36,25 @@
                   <small id="searchHelp" class="form-text text-muted">You can search by organization, research interests, or discipline with "organization:princeton", "research_interests:race", "discipline:journalism".</small>
                 </form>
               </div>
+              <button type="button" class="btn btn-sm btn-secondary d-md-none d-inline-block" data-toggle="modal" data-target="#exampleModal">
+                Search Filters
+              </button>
             </div>
           </div>
 
           <div class="row d-none" id="people_search_results_container">
-            <div class="col-sm-12">
+            <div class="col-sm-12 d-none" id="zero_searches_results_found">
+              <div class="alert alert-info my-5" role="alert">
+                <h4 class="alert-heading">No Matches Found</h4>
+                <ul>
+                  <li>Check the spelling of your keyword</li>
+                  <li>Try an alternate word or selection</li>
+                  <li>Try entering fewer kewords or selections</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-sm-12" id="search_results_listing">
               <h2 class="display-4">Search Results</h2>
               <hr />
               <br />
@@ -76,5 +94,22 @@
     allPeople = allPeople.concat({{ data.all-people-post-2020 | jsonify}});
   </script>
     {% include footer.html %}
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Search Filters</h5>
+      </div>
+      <div class="modal-body">
+        {% include people_filter.html uniqueid="modal" %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Apply</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
