Update placeholder to be "Search participants"

--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -24,7 +24,7 @@
               <div class="alert alert-secondary border-0">
                 <form id="participant_search_form">
                   <div class="input-group">
-                    <input name="q" type="text" class="form-control" placeholder="Find a SICSS participant" aria-label="Search" aria-describedby="searchHelp">
+                    <input name="q" type="text" class="form-control" placeholder="Search participants" aria-label="Search" aria-describedby="searchHelp">
                     <div class="input-group-append">
                       <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
                     </div><!--/input-group-append -->
