Switch to removing dashes from category values
This allows the category filters to work as OR queries as desired.

--- a/_includes/people_filter.html
+++ b/_includes/people_filter.html
@@ -37,7 +37,7 @@
 <div id="collapseInvolvement" class="collapse ml-3">
   {% for category in all_categories %}
     <div class="form-group form-check">
-      <input type="checkbox" name="+category" class="form-check-input" value="{{ category | slugify }}" id="{{ include.uniqueid }}-category-filter-{{ category | slugify }}">
+      <input type="checkbox" name="category" class="form-check-input" value="{{ category | slugify | replace: '-', '' }}" id="{{ include.uniqueid }}-category-filter-{{ category | slugify }}">
       <label for="{{ include.uniqueid }}-category-filter-{{ category | slugify }}" class="form-check-label">{{ category | capitalize }}</label>
     </div>
   {% endfor %}
