Remove stretch button style

--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -93,7 +93,7 @@
                               {{location_data.subtitle}}
                             </h6>
                             <p class="card-text">{{location_data.description}}</p>
-                            <a href="{{site.baseurl}}/{{location_data.year}}/{{location_data.link}}" class="btn btn-dark btn-sm stretched-link">Learn More</a>
+                            <a href="{{site.baseurl}}/{{location_data.year}}/{{location_data.link}}" class="btn btn-dark btn-sm">Learn More</a>
                             {% if apply_data.title and location_data.apply_button != "hidden" %}
                               <a href="{{site.baseurl}}/{{location_data.year}}/{{location_data.link}}/apply"
                               class="btn btn-dark btn-sm">Apply</a>
