--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -1,4 +1,5 @@
-{% include setup_data.html %} {% include setup_locations_by_year.inc %}
+{% include setup_data.html %}
+{% include setup_locations_by_year.inc %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,10 +14,8 @@
   </head>
   <body class="sub-page">
     {% include navbar.html %}
-    <!-- Start content -->
     {% include hero_secondary.html %} {% include breadcrumb.html %}
     <div class="container">
-      <!-- Locations -->
       <div class="row">
         <div class="col-sm-12">
           <h2 class="display-4">Locations, past and present</h2>
@@ -26,9 +25,7 @@
             increase the number of participants.
           </p>
         </div>
-        <!--/col-->
       </div>
-      <!--/row-->
       <div class="row">
         <div class="col-sm-12 mb-5">
           <div class="embed-responsive embed-responsive-16by9">
@@ -62,11 +59,8 @@
           </ul>
           {% include locations_tab_pages.html %}
         </div>
-        <!-- /col-sm-12 -->
       </div>
-      <!-- / row -->
     </div>
-    <!-- /container -->
 
     <section class="bg-secondary text-white py-5 mt-5">
       <div class="container">
@@ -84,11 +78,8 @@
               <a href="host.html" class="btn btn-dark">Learn More</a>
             </p>
           </div>
-          <!--col-->
         </div>
-        <!--/row-->
       </div>
-      <!--/container-->
     </section>
     {% include footer.html %}
   </body>
