linking exercises and moving markdown to build

--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -191,7 +191,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li><a href="{{ site.baseurl }}/boot_camp/data_wrangling">Data Wrangling Quiz</a></li>
           </ul>
         </div>
         <!-- /col -->
