--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1 class="display-3 text-light">SICSS Boot Camp (Beta)</h1>
+            <h1 class="display-3 text-light">SICSS Boot Camp</h1>
             <p class="h4 text-light">
               A beginners guide to the technology used at partner locations
             </p>
